@@ -240,6 +240,7 @@ class FrontendForm(ModelForm):
                            'blackberry_cylance_host','blackberry_cylance_tenant','blackberry_cylance_app_id',
                            'blackberry_cylance_app_secret',
                            'ms_sentinel_tenant_id', 'ms_sentinel_appid', 'ms_sentinel_appsecret',
+                           'sentinel_one_singularity_mobile_host', 'sentinel_one_singularity_mobile_client_id', 'sentinel_one_singularity_mobile_client_secret',
                            'ms_sentinel_subscription_id', 'ms_sentinel_resource_group', 'ms_sentinel_workspace',
                            'proofpoint_pod_uri', 'proofpoint_pod_cluster_id', 'proofpoint_pod_token',
                            'waf_cloudflare_apikey','waf_cloudflare_zoneid',
@@ -353,6 +354,8 @@ class FrontendForm(ModelForm):
                   'blackberry_cylance_app_secret',
                   'ms_sentinel_tenant_id', 'ms_sentinel_appid', 'ms_sentinel_appsecret', 'ms_sentinel_subscription_id',
                   'ms_sentinel_resource_group', 'ms_sentinel_workspace',
+                  'sentinel_one_singularity_mobile_host', 'sentinel_one_singularity_mobile_client_id',
+                  'sentinel_one_singularity_mobile_client_secret',
                   'proofpoint_pod_uri', 'proofpoint_pod_cluster_id', 'proofpoint_pod_token',
                   'waf_cloudflare_apikey', 'waf_cloudflare_zoneid',
                   'gsuite_alertcenter_json_conf', 'gsuite_alertcenter_admin_mail',
@@ -516,6 +519,9 @@ class FrontendForm(ModelForm):
             'ms_sentinel_subscription_id': TextInput(attrs={'class': 'form-control'}),
             'ms_sentinel_resource_group': TextInput(attrs={'class': 'form-control'}),
             'ms_sentinel_workspace': TextInput(attrs={'class': 'form-control'}),
+            'sentinel_one_singularity_mobile_host': TextInput(attrs={'class': 'form-control'}),
+            'sentinel_one_singularity_mobile_client_id': TextInput(attrs={'class': 'form-control'}),
+            'sentinel_one_singularity_mobile_client_secret': TextInput(attrs={'type': "password", 'class': 'form-control'}),
             'proofpoint_pod_uri': TextInput(attrs={'class': 'form-control'}),
             'proofpoint_pod_cluster_id': TextInput(attrs={'class': 'form-control'}),
             'proofpoint_pod_token': TextInput(attrs={'type': "password", 'class': 'form-control'}),
