@@ -1871,6 +1871,29 @@
                           </div>
                         </div>
                       </div>
+                      <div class="col-md-12 api_clients_row" id="api_sentinel_one_singularity_mobile_row">
+                        <div class="form-group">
+                          <label class="col-sm-3 control-label">{{ form.sentinel_one_singularity_mobile_host.label }}</label>
+                          <div class="col-sm-5">
+                            {{ form.sentinel_one_singularity_mobile_host }}
+                            {{ form.sentinel_one_singularity_mobile_host.errors|safe }}
+                          </div>
+                        </div>
+                        <div class="form-group">
+                          <label class="col-sm-3 control-label">{{ form.sentinel_one_singularity_mobile_client_id.label }}</label>
+                          <div class="col-sm-5">
+                            {{ form.sentinel_one_singularity_mobile_client_id }}
+                            {{ form.sentinel_one_singularity_mobile_client_id.errors|safe }}
+                          </div>
+                        </div>
+                        <div class="form-group">
+                          <label class="col-sm-3 control-label">{{ form.sentinel_one_singularity_mobile_client_secret.label }}</label>
+                          <div class="col-sm-5">
+                            {{ form.sentinel_one_singularity_mobile_client_secret }}
+                            {{ form.sentinel_one_singularity_mobile_client_secret.errors|safe }}
+                          </div>
+                        </div>
+                      </div>
                       <div class="col-md-12 api_clients_row" id="api_csc_domainmanager_row">
                         <div class="form-group">
                           <label class="col-sm-3 control-label">{{ form.csc_domainmanager_apikey.label }}</label>
